Update LinkedLists.java